Correzione bug di letture file 2024

--- a/Progetto/Pre-Elaborazione Dati/Pulizia Data AIS.ipynb
+++ b/Progetto/Pre-Elaborazione Dati/Pulizia Data AIS.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "4ec05d38",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "fbf94fe3",
    "metadata": {},
    "outputs": [
@@ -46,15 +46,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trovati 181 file Parquet da processare.\n"
+      "Trovati 365 file Parquet da processare.\n"
      ]
     }
    ],
    "source": [
-    "INPUT_DIR = '../../../Dataset/AIS_Daily_Data'\n",
+    "INPUT_DIR = '../../../Dataset'\n",
     "SCRIPT_DIR = os.getcwd()                                # Restituisce la directory di lavoro corrente\n",
     "\n",
-    "OUTPUT_DIR_NAME = 'Dataset_Cleaned_AIS' \n",
+    "OUTPUT_DIR_NAME = 'Dataset_Pre-Cleaned_AIS' \n",
     "OUTPUT_DIR = os.path.join(SCRIPT_DIR, OUTPUT_DIR_NAME)\n",
     "\n",
     "SOG_MIN_THRESHOLD = 2.0\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "b38aa3d3",
    "metadata": {},
    "outputs": [
@@ -113,14 +113,39 @@
       "----------------------------------------------------------------\n",
       "\n",
       "Numero di righe: 7337208, Numero di colonne: 6\n",
+      "\n",
+      "--- 🔍 DEBUG: Dati iniziali dal file AIS_2024_12_31.parquet ---\n",
+      "\n",
+      "Head del DataFrame:\n",
+      "        MMSI  Latitude  Longitude   SOG    COG           Timestamp\n",
+      "0  367776660  21.19308 -157.72342   8.0  112.1 2024-12-31 00:00:08\n",
+      "1  368095340  29.76995  -95.07893   0.0  185.5 2024-12-31 00:00:05\n",
+      "2  366847780  29.96697  -93.85909   0.1  186.2 2024-12-31 00:00:00\n",
+      "3  367481310  27.68242  -82.58073  11.5   57.6 2024-12-31 00:00:04\n",
+      "4  248669000  29.85743  -93.94083   3.1  220.9 2024-12-31 00:00:06\n",
+      "\n",
+      "Tipi di Dati (Dtypes) dopo la conversione Timestamp:\n",
+      "MMSI                  int64\n",
+      "Latitude            float64\n",
+      "Longitude           float64\n",
+      "SOG                 float64\n",
+      "COG                 float64\n",
+      "Timestamp    datetime64[ns]\n",
+      "dtype: object\n",
+      "----------------------------------------------------------------\n",
+      "\n",
+      "Numero di righe: 7588976, Numero di colonne: 6\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "FILE_PATH_TEST = '../../../Dataset/AIS_Daily_Data/ais-2025-01-01.parquet'\n",
+    "BASE_PATH = '../../../Dataset/'\n",
     "\n",
-    "COLUMN_MAPPING = {\n",
+    "FILE_PATH_TEST = os.path.join(BASE_PATH, 'ais-2025-01-01.parquet')\n",
+    "FILE_PATH_TEST2 = os.path.join(BASE_PATH, 'AIS_2024_12_31.parquet')\n",
+    "\n",
+    "COLUMN_MAPPING2025 = {\n",
     "    'mmsi': 'MMSI', \n",
     "    'latitude': 'Latitude', \n",
     "    'longitude': 'Longitude', \n",
@@ -128,16 +153,16 @@
     "    'cog': 'COG', \n",
     "    'base_date_time': 'Timestamp' \n",
     "}\n",
-    "COLUMNS_TO_READ = list(COLUMN_MAPPING.keys())\n",
+    "COLUMNS_TO_READ_2025 = list(COLUMN_MAPPING2025.keys())\n",
     "\n",
     "try:\n",
     "    df = pd.read_parquet(\n",
     "        FILE_PATH_TEST, \n",
-    "        columns=COLUMNS_TO_READ,\n",
+    "        columns=COLUMNS_TO_READ_2025,\n",
     "        engine='pyarrow' \n",
     "    )\n",
     "\n",
-    "    df = df.rename(columns=COLUMN_MAPPING)\n",
+    "    df = df.rename(columns=COLUMN_MAPPING2025)\n",
     "\n",
     "    df['Timestamp'] = pd.to_datetime(df['Timestamp'])\n",
     "    \n",
@@ -152,7 +177,42 @@
     "    print(f\"Numero di righe: {rows}, Numero di colonne: {columns}\\n\")\n",
     "        \n",
     "except Exception as e:\n",
-    "    print(f\"Errore nel processare il file {FILE_PATH_TEST}: {e}\")"
+    "    print(f\"Errore nel processare il file {FILE_PATH_TEST}: {e}\")\n",
+    "\n",
+    "\n",
+    "COLUMN_MAPPING2024 = {\n",
+    "    'MMSI': 'MMSI',\n",
+    "    'LAT': 'Latitude',\n",
+    "    'LON': 'Longitude',\n",
+    "    'SOG': 'SOG',\n",
+    "    'COG': 'COG',\n",
+    "    'BaseDateTime': 'Timestamp' \n",
+    "}\n",
+    "COLUMNS_TO_READ_2024 = list(COLUMN_MAPPING2024.keys())\n",
+    "\n",
+    "try:\n",
+    "    df = pd.read_parquet(\n",
+    "        FILE_PATH_TEST2, \n",
+    "        columns=COLUMNS_TO_READ_2024,\n",
+    "        engine='pyarrow' \n",
+    "    )\n",
+    "\n",
+    "    df = df.rename(columns=COLUMN_MAPPING2024)\n",
+    "\n",
+    "    df['Timestamp'] = pd.to_datetime(df['Timestamp'])\n",
+    "\n",
+    "\n",
+    "    print(f\"--- 🔍 DEBUG: Dati iniziali dal file {os.path.basename(FILE_PATH_TEST2)} ---\")\n",
+    "    print(\"\\nHead del DataFrame:\")\n",
+    "    print(df.head())\n",
+    "    print(\"\\nTipi di Dati (Dtypes) dopo la conversione Timestamp:\")\n",
+    "    print(df.dtypes)\n",
+    "    print(\"----------------------------------------------------------------\\n\")\n",
+    "    rows,columns = df.shape\n",
+    "    print(f\"Numero di righe: {rows}, Numero di colonne: {columns}\\n\")\n",
+    "        \n",
+    "except Exception as e:\n",
+    "    print(f\"Errore nel processare il file {FILE_PATH_TEST2}: {e}\")"
    ]
   },
   {
@@ -199,8 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Riscrivo per ogni file il nome delle colonne\n",
-    "COLUMN_MAPPING = {\n",
+    "MAPPING_2025 = {\n",
     "    'mmsi': 'MMSI', \n",
     "    'latitude': 'Latitude', \n",
     "    'longitude': 'Longitude', \n",
@@ -208,49 +267,76 @@
     "    'cog': 'COG', \n",
     "    'base_date_time': 'Timestamp' \n",
     "}\n",
-    "COLUMNS_TO_READ = list(COLUMN_MAPPING.keys())\n",
     "\n",
-    "# Processa ogni file Parquet nella directory di input e applica la pulizia\n",
+    "COLUMNS_2025 = list(MAPPING_2025.keys())\n",
+    "\n",
+    "MAPPING_2024 = {\n",
+    "    'MMSI': 'MMSI',\n",
+    "    'LAT': 'Latitude',\n",
+    "    'LON': 'Longitude',\n",
+    "    'SOG': 'SOG',\n",
+    "    'COG': 'COG',\n",
+    "    'BaseDateTime': 'Timestamp'\n",
+    "}\n",
+    "COLUMNS_2024 = list(MAPPING_2024.keys())\n",
+    "\n",
     "for file_path in all_files:\n",
-    "    try:\n",
+    "    df = None\n",
+    "    mapping_usato = None\n",
     "\n",
+    "    try:\n",
+    "        \n",
     "        df = pd.read_parquet(\n",
     "            file_path, \n",
-    "            columns=COLUMNS_TO_READ,\n",
+    "            columns=COLUMNS_2025,\n",
     "            engine='pyarrow' \n",
     "        )\n",
-    "\n",
-    "        df = df.rename(columns=COLUMN_MAPPING)\n",
-    "\n",
-    "        df['Timestamp'] = pd.to_datetime(df['Timestamp'])\n",
+    "        df = df.rename(columns=MAPPING_2025)\n",
+    "        mapping_usato = \"2025\"\n",
+    "    \n",
+    "    except Exception as e1:\n",
+    "        try:\n",
+    "            df = pd.read_parquet(\n",
+    "                file_path, \n",
+    "                columns=COLUMNS_2024,\n",
+    "                engine='pyarrow' \n",
+    "            )\n",
+    "            df = df.rename(columns=MAPPING_2024)\n",
+    "            mapping_usato = \"2024\"\n",
     "        \n",
+    "        except Exception as e2:\n",
+    "            print(f\"Errore IRRISOLVIBILE nel caricare {file_path}: Schema non riconosciuto.\")\n",
+    "            continue\n",
     "\n",
-    "        df = df[df['SOG'] > SOG_MIN_THRESHOLD]                                                   #Filtro per navi ferme\n",
-    "        df = df[df['COG'] != 511]                                                                #Filtro per COG non valido\n",
+    "    if df is not None:\n",
+    "        try:\n",
+    "            \n",
+    "            df['Timestamp'] = pd.to_datetime(df['Timestamp'])\n",
+    "            \n",
+    "            # Filtri cinematici e geografici\n",
+    "            df = df[df['SOG'] > SOG_MIN_THRESHOLD]\n",
+    "            df = df[df['COG'] != 511]\n",
+    "            df = df[(df['Latitude'] >= -90) & (df['Latitude'] <= 90)]\n",
+    "            df = df[(df['Longitude'] >= -180) & (df['Longitude'] <= 180)]\n",
+    "            \n",
+    "            # Filtri di integrità\n",
+    "            df = df.dropna(subset=['MMSI', 'Latitude', 'Longitude', 'SOG', 'COG'])\n",
+    "            df['MMSI'] = df['MMSI'].astype(str).str.replace(r'\\D', '', regex=True)\n",
+    "            df = df[df['MMSI'].str.len() == 9]\n",
     "\n",
-    "        df = df[(df['Latitude'] >= -90) & (df['Latitude'] <= 90)]                                #filtro latitudine \n",
-    "        df = df[(df['Longitude'] >= -180) & (df['Longitude'] <= 180)]                            #filtro longitudine \n",
-    "        df = df.dropna(subset=['MMSI', 'Latitude', 'Longitude', 'SOG', 'COG'])\n",
-    "        \n",
-    "        \n",
-    "        df['MMSI'] = df['MMSI'].astype(str).str.replace(r'\\D', '', regex=True)\n",
-    "        df = df[df['MMSI'].str.len() == 9]                                                       #Corretto numero di cifre MMSI\n",
+    "            if not df.empty:\n",
     "\n",
-    "        if not df.empty:\n",
-    "            df = df.sort_values(by=['MMSI', 'Timestamp']).reset_index(drop=True)                 #Ordina per MMSI e Timestamp\n",
+    "                output_filename = os.path.basename(file_path).lower()\n",
+    "                output_file = os.path.join(OUTPUT_DIR, output_filename)\n",
+    "                \n",
+    "                df.to_parquet(output_file, index=False)\n",
+    "                \n",
+    "                print(f\"File {os.path.basename(file_path)} pre-pulito\")\n",
+    "            \n",
+    "        except Exception as e:\n",
+    "            print(f\"Errore nella FASE DI PULIZIA per il file {file_path}: {e}\")\n",
     "\n",
-    "            #Raggruppa le traiettorie\n",
-    "            df['TimeDiff'] = df.groupby('MMSI')['Timestamp'].diff()\n",
-    "            df['IsNewTraj'] = (df['MMSI'] != df['MMSI'].shift(1)) | (df['TimeDiff'] > TIME_GAP_THRESHOLD)\n",
-    "            df['TrajectoryID'] = df['IsNewTraj'].cumsum()\n",
-    "\n",
-    "           \n",
-    "            output_file = os.path.join(OUTPUT_DIR, os.path.basename(file_path))\n",
-    "            df.to_parquet(output_file, index=False)\n",
-    "            print(f\"File {os.path.basename(file_path)} pulito e salvato in {output_file}\")\n",
-    "\n",
-    "    except Exception as e:\n",
-    "        print(f\"Errore nel processare il file {file_path}: {e}\")"
+    "print(\"\\n--- FASE 1 (Pre-Pulizia) completata. ---\")"
    ]
   },
   {
@@ -272,7 +358,7 @@
     "\n",
     "df = pd.read_parquet(\n",
     "        FILE_PATH_TEST, \n",
-    "        columns=COLUMNS_TO_READ,\n",
+    "        columns=COLUMNS_TO_READ_2025,\n",
     "        engine='pyarrow' \n",
     "    )\n",
     "\n",
