--- a/Progetto/Pre-Elaborazione Dati/Pulizia Data AIS.ipynb
+++ b/Progetto/Pre-Elaborazione Dati/Pulizia Data AIS.ipynb
@@ -1642,7 +1642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "1518358e",
    "metadata": {},
    "outputs": [
@@ -1708,7 +1708,7 @@
     "        print(f\"Il tuo dataset finale contiene {numero_totale_traiettorie:,} traiettorie uniche totali.\")\n",
     "\n",
     "except Exception as e:\n",
-    "    print(f\"--- ❌ ERRORE DURANTE IL CONTEGGIO ---\")\n",
+    "    print(f\"ERRORE\")\n",
     "    print(e)"
    ]
   },
@@ -1722,7 +1722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "93148560",
    "metadata": {},
    "outputs": [
@@ -2367,7 +2367,7 @@
        "49             6  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
