aggiunta controllo shape

--- a/Progetto/Pre-Elaborazione Dati/Pulizia Data AIS.ipynb
+++ b/Progetto/Pre-Elaborazione Dati/Pulizia Data AIS.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "fbf94fe3",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "b38aa3d3",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
     "    df['Timestamp'] = pd.to_datetime(df['Timestamp'])\n",
     "\n",
     "\n",
-    "    print(f\"--- 🔍 DEBUG: Dati iniziali dal file {os.path.basename(FILE_PATH_TEST2)} ---\")\n",
+    "    print(f\" DEBUG: Dati iniziali dal file {os.path.basename(FILE_PATH_TEST2)}\")\n",
     "    print(\"\\nHead del DataFrame:\")\n",
     "    print(df.head())\n",
     "    print(\"\\nTipi di Dati (Dtypes) dopo la conversione Timestamp:\")\n",
@@ -1722,7 +1722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "93148560",
    "metadata": {},
    "outputs": [
@@ -2367,7 +2367,7 @@
        "49             6  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2382,7 +2382,28 @@
     "        engine='pyarrow' \n",
     "    )\n",
     "\n",
-    "df.head(50)"
+    "df.head(50)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "08c88e60",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numero di righe: 39959464, Numero di colonne: 7\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "rows,columns = df.shape\n",
+    "print(f\"Numero di righe: {rows}, Numero di colonne: {columns}\\n\")"
    ]
   }
  ],
