aggiunta pulizia MMSI

--- a/Progetto/Pre-Elaborazione Dati/Pulizia Data AIS.ipynb
+++ b/Progetto/Pre-Elaborazione Dati/Pulizia Data AIS.ipynb
@@ -1320,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "ea250b15",
    "metadata": {},
    "outputs": [
@@ -1431,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "be38478e",
    "metadata": {},
    "outputs": [
@@ -1550,41 +1550,46 @@
       "Lettura blocchi da: Dataset_Stitched_Finale\n",
       "Salvataggio in: /home/al3th3ia/Scrivania/Cybersecurity/Detecting-Trajectory-Spoofing-Attacks-on-AIS/Progetto/Pre-Elaborazione Dati/Dataset\n",
       "\n",
-      "Inizio scansione...\n",
-      "Blocco blocco_000-segmentato.parquet: Trovate e rimosse 7527 righe duplicate.\n",
-      "Blocco blocco_001-segmentato.parquet: Trovate e rimosse 1245 righe duplicate.\n",
-      "Blocco blocco_002-segmentato.parquet: Trovate e rimosse 1329 righe duplicate.\n",
-      "Blocco blocco_003-segmentato.parquet: Trovate e rimosse 1064 righe duplicate.\n",
-      "Blocco blocco_004-segmentato.parquet: Trovate e rimosse 2699 righe duplicate.\n",
-      "Blocco blocco_005-segmentato.parquet: Trovate e rimosse 8737 righe duplicate.\n",
-      "Blocco blocco_006-segmentato.parquet: Trovate e rimosse 5302 righe duplicate.\n",
-      "Blocco blocco_007-segmentato.parquet: Trovate e rimosse 6240 righe duplicate.\n",
-      "Blocco blocco_008-segmentato.parquet: Trovate e rimosse 5287 righe duplicate.\n",
-      "Blocco blocco_009-segmentato.parquet: Trovate e rimosse 6058 righe duplicate.\n",
-      "Blocco blocco_010-segmentato.parquet: Trovate e rimosse 6137 righe duplicate.\n",
-      "Blocco blocco_011-segmentato.parquet: Trovate e rimosse 4072 righe duplicate.\n",
-      "Blocco blocco_012-segmentato.parquet: Trovate e rimosse 4855 righe duplicate.\n",
-      "Blocco blocco_013-segmentato.parquet: Trovate e rimosse 6558 righe duplicate.\n",
-      "Blocco blocco_014-segmentato.parquet: Trovate e rimosse 7355 righe duplicate.\n",
-      "Blocco blocco_015-segmentato.parquet: Trovate e rimosse 7089 righe duplicate.\n",
-      "Blocco blocco_016-segmentato.parquet: Trovate e rimosse 9960 righe duplicate.\n",
-      "Blocco blocco_017-segmentato.parquet: Trovate e rimosse 6473 righe duplicate.\n",
-      "Blocco blocco_018-segmentato.parquet: Trovate e rimosse 8105 righe duplicate.\n",
-      "Blocco blocco_019-segmentato.parquet: Trovate e rimosse 6077 righe duplicate.\n",
-      "Blocco blocco_020-segmentato.parquet: Trovate e rimosse 12409 righe duplicate.\n",
-      "Blocco blocco_021-segmentato.parquet: Trovate e rimosse 9882 righe duplicate.\n",
-      "Blocco blocco_022-segmentato.parquet: Trovate e rimosse 8453 righe duplicate.\n",
-      "Blocco blocco_023-segmentato.parquet: Trovate e rimosse 14830 righe duplicate.\n",
-      "Blocco blocco_024-segmentato.parquet: Trovate e rimosse 3525 righe duplicate.\n",
+      "Inizio scansione e pulizia (MMSI Specifici + Duplicati)...\n",
+      "Regole MMSI: Rimozione di zeri, '123456789' e cifre ripetute.\n",
+      "Blocco blocco_000-segmentato.parquet: Rimosse 1915 righe (MMSI) | Rimosse 7526 righe (Duplicati)\n",
+      "Blocco blocco_001-segmentato.parquet: Rimosse 1014 righe (MMSI) | Rimosse 1245 righe (Duplicati)\n",
+      "Blocco blocco_002-segmentato.parquet: Rimosse 1555 righe (MMSI) | Rimosse 1329 righe (Duplicati)\n",
+      "Blocco blocco_003-segmentato.parquet: Rimosse 1234 righe (MMSI) | Rimosse 1064 righe (Duplicati)\n",
+      "Blocco blocco_004-segmentato.parquet: Rimosse 996 righe (MMSI) | Rimosse 2699 righe (Duplicati)\n",
+      "Blocco blocco_005-segmentato.parquet: Rimosse 1144 righe (MMSI) | Rimosse 8737 righe (Duplicati)\n",
+      "Blocco blocco_006-segmentato.parquet: Rimosse 272 righe (MMSI) | Rimosse 5302 righe (Duplicati)\n",
+      "Blocco blocco_007-segmentato.parquet: Rimosse 3767 righe (MMSI) | Rimosse 6240 righe (Duplicati)\n",
+      "Blocco blocco_008-segmentato.parquet: Rimosse 3625 righe (MMSI) | Rimosse 5287 righe (Duplicati)\n",
+      "Blocco blocco_009-segmentato.parquet: Rimosse 1791 righe (MMSI) | Rimosse 6058 righe (Duplicati)\n",
+      "Blocco blocco_010-segmentato.parquet: Rimosse 1605 righe (MMSI) | Rimosse 6137 righe (Duplicati)\n",
+      "Blocco blocco_011-segmentato.parquet: Rimosse 687 righe (MMSI) | Rimosse 4072 righe (Duplicati)\n",
+      "Blocco blocco_012-segmentato.parquet: Rimosse 463 righe (MMSI) | Rimosse 4854 righe (Duplicati)\n",
+      "Blocco blocco_013-segmentato.parquet: Rimosse 854 righe (MMSI) | Rimosse 6558 righe (Duplicati)\n",
+      "Blocco blocco_014-segmentato.parquet: Rimosse 1098 righe (MMSI) | Rimosse 7355 righe (Duplicati)\n",
+      "Blocco blocco_015-segmentato.parquet: Rimosse 2270 righe (MMSI) | Rimosse 7089 righe (Duplicati)\n",
+      "Blocco blocco_016-segmentato.parquet: Rimosse 1308 righe (MMSI) | Rimosse 9960 righe (Duplicati)\n",
+      "Blocco blocco_017-segmentato.parquet: Rimosse 3837 righe (MMSI) | Rimosse 6472 righe (Duplicati)\n",
+      "Blocco blocco_018-segmentato.parquet: Rimosse 3552 righe (MMSI) | Rimosse 8105 righe (Duplicati)\n",
+      "Blocco blocco_019-segmentato.parquet: Rimosse 1797 righe (MMSI) | Rimosse 6077 righe (Duplicati)\n",
+      "Blocco blocco_020-segmentato.parquet: Rimosse 6677 righe (MMSI) | Rimosse 12408 righe (Duplicati)\n",
+      "Blocco blocco_021-segmentato.parquet: Rimosse 4321 righe (MMSI) | Rimosse 9882 righe (Duplicati)\n",
+      "Blocco blocco_022-segmentato.parquet: Rimosse 1070 righe (MMSI) | Rimosse 8452 righe (Duplicati)\n",
+      "Blocco blocco_023-segmentato.parquet: Rimosse 908 righe (MMSI) | Rimosse 14830 righe (Duplicati)\n",
+      "Blocco blocco_024-segmentato.parquet: Rimosse 339 righe (MMSI) | Rimosse 3525 righe (Duplicati)\n",
+      "\n",
+      "--- PULIZIA COMPLETATA ---\n",
+      "Totale righe rimosse per MMSI non valido: 48099\n",
+      "Totale righe rimosse per duplicati: 161263\n",
       "Il dataset finale è in: /home/al3th3ia/Scrivania/Cybersecurity/Detecting-Trajectory-Spoofing-Attacks-on-AIS/Progetto/Pre-Elaborazione Dati/Dataset\n"
      ]
     }
    ],
    "source": [
     "INPUT_DIR = 'Dataset_Stitched_Finale' \n",
-    "\n",
     "OUTPUT_DIR_NAME = 'Dataset' \n",
     "OUTPUT_DIR = os.path.join(os.getcwd(), OUTPUT_DIR_NAME)\n",
+    "NOME_COLONNA_MMSI = \"MMSI\" \n",
     "\n",
     "if os.path.exists(OUTPUT_DIR):\n",
     "    shutil.rmtree(OUTPUT_DIR)\n",
@@ -1599,36 +1604,76 @@
     "    print(f\"ERRORE: Nessun file blocco trovato in {INPUT_DIR}.\")\n",
     "else:\n",
     "    total_duplicates_removed = 0\n",
-    "    print(\"Inizio scansione...\")\n",
+    "    total_mmsi_removed = 0  \n",
+    "    \n",
+    "    print(\"Inizio scansione e pulizia (MMSI Specifici + Duplicati)...\")\n",
+    "    print(\"Regole MMSI: Rimozione di zeri, '123456789' e cifre ripetute.\")\n",
     "\n",
     "    for block_path in all_blocks:\n",
+    "        block_name = os.path.basename(block_path)\n",
+    "        df_block = None \n",
+    "        \n",
     "        try:\n",
-    "            \n",
     "            df_block = pd.read_parquet(block_path)\n",
-    "            rows_before = len(df_block)\n",
+    "            rows_before_total = len(df_block)\n",
     "            \n",
-    "            df_block.drop_duplicates(inplace=True)   # Rimuove le righe duplicate\n",
+    "            if rows_before_total == 0:\n",
+    "                print(f\"Blocco {block_name}: Vuoto. Saltato.\")\n",
+    "                continue\n",
+    "                \n",
+    "            if NOME_COLONNA_MMSI not in df_block.columns:\n",
+    "                print(f\"ERRORE: Colonna '{NOME_COLONNA_MMSI}' non trovata in {block_name}. File saltato.\")\n",
+    "                continue\n",
     "            \n",
-    "            rows_after = len(df_block)\n",
-    "            local_duplicates_removed = rows_before - rows_after\n",
-    "            \n",
-    "            if local_duplicates_removed > 0:\n",
-    "                print(f\"Blocco {os.path.basename(block_path)}: Trovate e rimosse {local_duplicates_removed} righe duplicate.\")\n",
-    "                total_duplicates_removed += local_duplicates_removed\n",
-    "            else:\n",
-    "                print(f\"Blocco {os.path.basename(block_path)}: Nessun duplicato trovato.\")\n",
+    "            df_block['MMSI_str'] = df_block[NOME_COLONNA_MMSI].astype(str).str.strip()\n",
     "\n",
-    "            output_file = os.path.join(OUTPUT_DIR, os.path.basename(block_path))\n",
+    "            filtro_lunghezza = df_block['MMSI_str'].str.len() == 9\n",
+    "            filtro_numerico = df_block['MMSI_str'].str.isdigit()\n",
+    "            filtro_non_zeri = df_block['MMSI_str'] != '000000000'\n",
+    "            filtro_non_seq = df_block['MMSI_str'] != '123456789'\n",
+    "            filtro_non_ripetuti = df_block['MMSI_str'].apply(lambda x: len(set(x)) > 1)\n",
+    "\n",
+    "            df_block = df_block[\n",
+    "                filtro_lunghezza & \n",
+    "                filtro_numerico & \n",
+    "                filtro_non_zeri & \n",
+    "                filtro_non_seq & \n",
+    "                filtro_non_ripetuti\n",
+    "            ]\n",
+    "            \n",
+    "            df_block.drop(columns=['MMSI_str'], inplace=True)\n",
+    "            \n",
+    "            rows_after_mmsi = len(df_block)\n",
+    "            local_mmsi_removed = rows_before_total - rows_after_mmsi\n",
+    "            total_mmsi_removed += local_mmsi_removed\n",
+    "            \n",
+    "\n",
+    "            rows_before_duplicates = rows_after_mmsi\n",
+    "            df_block.drop_duplicates(inplace=True)\n",
+    "            \n",
+    "            rows_after_duplicates = len(df_block)\n",
+    "            local_duplicates_removed = rows_before_duplicates - rows_after_duplicates\n",
+    "            total_duplicates_removed += local_duplicates_removed\n",
+    "\n",
+    "            print(f\"Blocco {block_name}: Rimosse {local_mmsi_removed} righe (MMSI) | Rimosse {local_duplicates_removed} righe (Duplicati)\")\n",
+    "\n",
+    "            output_file = os.path.join(OUTPUT_DIR, block_name)\n",
     "            df_block.to_parquet(output_file, index=False, engine='pyarrow', compression='snappy')\n",
     "            \n",
+    "        except MemoryError:\n",
+    "            print(f\"ERRORE DI MEMORIA: Il blocco {block_name} è troppo grande per essere processato.\")\n",
+    "            break \n",
     "        except Exception as e:\n",
-    "            print(f\"ERRORE durante la pulizia del blocco {os.path.basename(block_path)}: {e}\")\n",
+    "            print(f\"ERRORE durante la pulizia del blocco {block_name}: {e}\")\n",
     "\n",
     "        finally:\n",
-    "            if 'df_block' in locals():\n",
+    "            if df_block is not None:\n",
     "                del df_block\n",
-    "            gc.collect()\n",
+    "            gc.collect() \n",
     "\n",
+    "    print(\"\\n--- PULIZIA COMPLETATA ---\")\n",
+    "    print(f\"Totale righe rimosse per MMSI non valido: {total_mmsi_removed}\")\n",
+    "    print(f\"Totale righe rimosse per duplicati: {total_duplicates_removed}\")\n",
     "    print(f\"Il dataset finale è in: {OUTPUT_DIR}\")"
    ]
   },
