--- a/Progetto/LSMT/LSMT.ipynb
+++ b/Progetto/LSMT/LSMT.ipynb
@@ -18,14 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "2a5896be",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "import glob\n",
     "import os\n",
-    "\n"
+    "import gc\n",
+    "from collections import Counter\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import joblib"
    ]
   },
   {
@@ -33,24 +37,32 @@
    "execution_count": null,
    "id": "57ad8acf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File di Training: 16\n",
+      "File di Validazione: 4\n",
+      "File di Test: 4\n",
+      "\n",
+      "Primo file di Train: blocco_000-segmentato.parquet\n",
+      "Primo file di Val: blocco_016-segmentato.parquet\n",
+      "Primo file di Test: blocco_020-segmentato.parquet\n"
+     ]
+    }
+   ],
    "source": [
     "INPUT_DIR = '../Pre-Elaborazione Dati/Dataset'\n",
-    "all_stitched_files = sorted(glob.glob(os.path.join(INPUT_DIR, '*.parquet')))\n",
+    "all_files = sorted(glob.glob(os.path.join(INPUT_DIR, '*.parquet')))\n",
     "\n",
-    "# 2. Definisci la suddivisione 16-4-4 (8-2-2 mesi)\n",
-    "# (Assicurati che i tuoi file siano ordinati cronologicamente, \n",
-    "#  'blocco_000', 'blocco_001', ecc. come abbiamo fatto)\n",
-    "\n",
-    "TRAIN_FILES = all_stitched_files[0:16]  # Primi 16 blocchi (8 mesi)\n",
-    "VAL_FILES = all_stitched_files[16:20] # Successivi 4 blocchi (2 mesi)\n",
-    "TEST_FILES = all_stitched_files[20:24] # Ultimi 4 blocchi (2 mesi)\n",
-    "\n",
+    "TRAIN_FILES = all_files[0:16]\n",
+    "VAL_FILES = all_files[16:20]\n",
+    "TEST_FILES = all_files[20:24]\n",
     "print(f\"File di Training: {len(TRAIN_FILES)}\")\n",
     "print(f\"File di Validazione: {len(VAL_FILES)}\")\n",
     "print(f\"File di Test: {len(TEST_FILES)}\")\n",
     "\n",
-    "# Stampa un esempio\n",
     "print(f\"\\nPrimo file di Train: {os.path.basename(TRAIN_FILES[0])}\")\n",
     "print(f\"Primo file di Val: {os.path.basename(VAL_FILES[0])}\")\n",
     "print(f\"Primo file di Test: {os.path.basename(TEST_FILES[0])}\")"
@@ -66,9 +78,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<>:53: SyntaxWarning: invalid escape sequence '\\V'\n",
-      "<>:53: SyntaxWarning: invalid escape sequence '\\V'\n",
-      "/tmp/ipykernel_11288/674630576.py:53: SyntaxWarning: invalid escape sequence '\\V'\n",
+      "<>:46: SyntaxWarning: invalid escape sequence '\\V'\n",
+      "<>:46: SyntaxWarning: invalid escape sequence '\\V'\n",
+      "/tmp/ipykernel_19344/47474260.py:46: SyntaxWarning: invalid escape sequence '\\V'\n",
       "  print(f\"\\VERIFICA CONTEGGI:\")\n"
      ]
     },
@@ -76,7 +88,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trovati 25 file .parquet in '/home/al3th3ia/Scrivania/Cybersecurity/Detecting-Trajectory-Spoofing-Attacks-on-AIS/Progetto/Pre-Elaborazione Dati/Dataset'\n",
+      "Trovati 25 file .parquet in '../Pre-Elaborazione Dati/Dataset'\n",
       "\n",
       "FASE 1: Avvio scansione unificata (UN FILE ALLA VOLTA)...\n",
       "  Processando blocco_000-segmentato.parquet...\n",
@@ -100,38 +112,28 @@
       "FASE 1: Scansione completata.\n",
       "FASE 2: Verifica e Analisi.\n",
       "\\VERIFICA CONTEGGI:\n",
-      "ID Unici (metodo 'set'):     4,370,475\n",
-      "ID Unici (metodo 'Counter'): 4,370,475\n",
+      "ID Unici (metodo 'set'):     4,369,967\n",
+      "ID Unici (metodo 'Counter'): 4,369,967\n",
       "\n",
       "SUCCESSO! I conteggi corrispondono.\n",
       "\n",
-      "Risultati dell'analisi (su 4,370,475 traiettorie totali di TRAINING):\n",
+      "Risultati dell'analisi (su 4,369,967 traiettorie totali di TRAINING):\n",
       "---------------------------------------------------------------------------\n",
       "Window Size     | Traiettorie Usabili  | Traiettorie Scartate | % Usabili \n",
       "---------------------------------------------------------------------------\n",
-      "10              | 2957676              | 1412799              | 67.67     %\n",
-      "15              | 2678739              | 1691736              | 61.29     %\n",
-      "20              | 2461907              | 1908568              | 56.33     %\n",
-      "25              | 2284093              | 2086382              | 52.26     %\n",
-      "30              | 2131890              | 2238585              | 48.78     %\n",
-      "40              | 1882235              | 2488240              | 43.07     %\n",
-      "50              | 1685008              | 2685467              | 38.55     %\n",
-      "60              | 1524298              | 2846177              | 34.88     %\n",
-      "100             | 1089262              | 3281213              | 24.92     %\n",
+      "10              | 2957346              | 1412621              | 67.67     %\n",
+      "15              | 2678465              | 1691502              | 61.29     %\n",
+      "20              | 2461683              | 1908284              | 56.33     %\n",
+      "25              | 2283891              | 2086076              | 52.26     %\n",
+      "30              | 2131706              | 2238261              | 48.78     %\n",
+      "40              | 1882078              | 2487889              | 43.07     %\n",
       "---------------------------------------------------------------------------\n",
       "Analisi completata.\n"
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import glob\n",
-    "import os\n",
-    "import gc\n",
-    "from collections import Counter\n",
-    "\n",
-    "# --- 1. CONFIGURAZIONE ---\n",
-    "INPUT_DIR = '/home/al3th3ia/Scrivania/Cybersecurity/Detecting-Trajectory-Spoofing-Attacks-on-AIS/Progetto/Pre-Elaborazione Dati/Dataset' \n",
+    "INPUT_DIR = '../Pre-Elaborazione Dati/Dataset' \n",
     "\n",
     "all_files = sorted(glob.glob(os.path.join(INPUT_DIR, '*.parquet')))\n",
     "\n",
@@ -143,7 +145,6 @@
     "TRAIN_FILES = all_files[0:16]\n",
     "IPERPARAMETRI_TIMESTEP = [10, 15, 20, 25, 30, 40]\n",
     "\n",
-    "# --- FASE 1: Scansione Unificata (Anti-RAM Crash) ---\n",
     "print(f\"\\nFASE 1: Avvio scansione unificata (UN FILE ALLA VOLTA)...\")\n",
     "\n",
     "total_counts_counter = Counter()\n",
@@ -154,12 +155,8 @@
     "    try:\n",
     "        df = pd.read_parquet(file_path, columns=['TrajectoryID'])\n",
     "        \n",
-    "        # 1. Metodo Set (affidabile)\n",
     "        total_ids_set.update(df['TrajectoryID'].unique())\n",
     "        \n",
-    "        # 2. Metodo Counter (NUOVA VERSIONE CORRETTA)\n",
-    "        # Invece di .groupby(), che fallisce, diamo in pasto\n",
-    "        # l'intera colonna al Counter. È molto più efficiente.\n",
     "        total_counts_counter.update(df['TrajectoryID'])\n",
     "        \n",
     "        del df\n",
@@ -167,10 +164,7 @@
     "    except Exception as e:\n",
     "        print(f\"    ERRORE nel leggere {file_path}: {e}\")\n",
     "        \n",
-    "print(\"\\n\" + \"---\" * 20)\n",
-    "print(\"FASE 1: Scansione completata.\")\n",
     "\n",
-    "# --- FASE 2: Verifica e Analisi ---\n",
     "print(\"FASE 2: Verifica e Analisi.\")\n",
     "\n",
     "conteggio_set = len(total_ids_set)\n",
@@ -180,14 +174,11 @@
     "print(f\"ID Unici (metodo 'set'):     {conteggio_set:,}\")\n",
     "print(f\"ID Unici (metodo 'Counter'): {conteggio_counter:,}\")\n",
     "\n",
-    "# Ora DEVONO corrispondere\n",
     "if conteggio_set != conteggio_counter:\n",
     "    print(\"ERRORE LOGICO: I conteggi non corrispondono. C'è ancora un problema.\")\n",
     "else:\n",
     "    print(\"\\nSUCCESSO! I conteggi corrispondono.\")\n",
     "    \n",
-    "    # Ora che siamo sicuri, procediamo con l'analisi\n",
-    "    # Estraiamo le LUNGHEZZE dal counter\n",
     "    all_lengths = list(total_counts_counter.values())\n",
     "    totale_traiettorie_analisi = conteggio_counter\n",
     "\n",
@@ -204,6 +195,85 @@
     "\n",
     "    print(\"-\" * 75)\n",
     "    print(\"Analisi completata.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32cb7939",
+   "metadata": {},
+   "source": [
+    "### Normalizzazione\n",
+    "\n",
+    "Passaggio fondamentale perchè le tue reti neurali (LSTM/LNN) faticano a imparare quando i dati di input hanno scale completamente diverse. Ad esempio, la colonna COG (rotta) va da 0 a 360, mentre la colonna SOG (velocità) potrebbe andare da 0 a 50. Questi intervalli così diversi \"confondono\" la rete durante l'addestramento.\n",
+    "Dobbiamo quindi standardizzarli, portando tutte le colonne a una scala simile.  \n",
+    "Il modo corretto per standardizzare è calcolare la media e la deviazione standard dell'intero set di addestramento (tutti i 4.3 milioni di traiettorie nei tuoi 16 file). Ovviamente, questi dati sono troppo grandi per essere caricati tutti insieme in memoria.\n",
+    "\n",
+    "Quello che facciamo è:  \n",
+    "- Inizializziamo uno scaler vuoto e iteriamo sui 16 file di Train.\n",
+    "- `partial_fit` è la parte fondamentale perchè per ogni file che carica. Questa funzione dice allo scaler: \"Prendi la media e la deviazione che hai calcolato finora e aggiornale includendo questo nuovo blocco di dati\".\n",
+    "- `joblib.dump(scaler, SCALER_PATH)` salva questi parametri calcolati in un file esterno.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28d81766",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Processando file 1/16: blocco_000-segmentato.parquet...\n",
+      "  Processando file 2/16: blocco_001-segmentato.parquet...\n",
+      "  Processando file 3/16: blocco_002-segmentato.parquet...\n",
+      "  Processando file 4/16: blocco_003-segmentato.parquet...\n",
+      "  Processando file 5/16: blocco_004-segmentato.parquet...\n",
+      "  Processando file 6/16: blocco_005-segmentato.parquet...\n",
+      "  Processando file 7/16: blocco_006-segmentato.parquet...\n",
+      "  Processando file 8/16: blocco_007-segmentato.parquet...\n",
+      "  Processando file 9/16: blocco_008-segmentato.parquet...\n",
+      "  Processando file 10/16: blocco_009-segmentato.parquet...\n",
+      "  Processando file 11/16: blocco_010-segmentato.parquet...\n",
+      "  Processando file 12/16: blocco_011-segmentato.parquet...\n",
+      "  Processando file 13/16: blocco_012-segmentato.parquet...\n",
+      "  Processando file 14/16: blocco_013-segmentato.parquet...\n",
+      "  Processando file 15/16: blocco_014-segmentato.parquet...\n",
+      "  Processando file 16/16: blocco_015-segmentato.parquet...\n",
+      "\n",
+      "Adattamento completato su tutti i 16 file di training.\n",
+      "\n",
+      "✅ SUCCESSO! Scaler (fittato su TUTTO il training set) salvato come 'scaler.joblib'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "COLONNE_DA_NORMALIZZARE = ['Latitude', 'Longitude', 'SOG', 'COG']\n",
+    "SCALER_PATH = 'scaler.joblib'\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "\n",
+    "try:\n",
+    "    \n",
+    "    for i, file_path in enumerate(TRAIN_FILES):\n",
+    "        \n",
+    "        print(f\"  Processando file {i+1}/{len(TRAIN_FILES)}: {os.path.basename(file_path)}...\")\n",
+    "        \n",
+    "        df_chunk = pd.read_parquet(file_path, columns=COLONNE_DA_NORMALIZZARE)\n",
+    "        \n",
+    "        scaler.partial_fit(df_chunk)\n",
+    "        \n",
+    "        del df_chunk\n",
+    "        gc.collect()\n",
+    "\n",
+    "    print(\"\\nAdattamento completato su tutti i 16 file di training.\")\n",
+    "    \n",
+    "    joblib.dump(scaler, SCALER_PATH) #Salva file\n",
+    "\n",
+    "    print(f\"\\nScaler salvato come '{SCALER_PATH}'.\")\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"\\n Errore durante la preparazione dello scaler: {e}\")"
    ]
   }
  ],
